<resources>
    <string name="app_name">My Festival</string>
    <string name="button_addFestival">Add Festival</string>
    <string name="hint_festivalTitle">Festival Title</string>
    <string name="hint_festivalDescription">Description</string>
    <string name="hint_festivalDate">Date</string>
    <string name="menu_addFestival">Add</string>
    <string name="save_festival"> Save Festival</string>
    <string name="menu_cancelFestival">Cancel</string>
    <string name="enter_festival_title"> Please enter a Festival Title </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_festival_image">Select festival image</string>
    <string name="change_festival_image">Change festival image</string>
    <string name="menu_deleteFestival">Delete Festival</string>
    <string name="menu_editFestival">Edit Festival</string>
    <string name="action_festival">Add</string>
    <string name="action_list">List</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">My Festival</string>
    <string name="nav_header_subtitle">Add Your Festivals</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="festivalsNotFound">No Festivals Yet...\nAdd Your Festivals!</string>

    <string name="festivalDetails">Festival Details</string>
    <string name="valueForMoney">Value For Money :</string>
    <string name="accessibility">Accessibility :</string>
    <string name="familyFriendliness">Family Friendliness :</string>

    <string name="messageLoading">Please Wait while the Festivals are Loading...</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="select_profile_image">Select Profile Image</string>
    <string name="action_location">Location</string>
</resources>


