<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="festivalvm"
            type="ie.wit.my_festival.ui.detail.FestivalDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_secondary"
            app:elevation="0dip"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/color_primary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <EditText
                    android:id="@+id/festivalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_festivalTitle"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_festivalDescription"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"/>

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_festivalDate"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/valueForMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valueForMoney"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date"
            android:layout_marginTop="16dp"/>

        <RatingBar
            android:id="@+id/valueForMoneyEditable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="@={festivalvm.observableFestival.valueForMoney}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valueForMoney"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/accessibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessibility"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valueForMoneyEditable"
            android:layout_marginTop="16dp"/>

        <RatingBar
            android:id="@+id/accessibilityEditable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="@={festivalvm.observableFestival.accessibility}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accessibility"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/familyFriendliness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/familyFriendliness"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accessibilityEditable"
            android:layout_marginTop="16dp"/>

        <RatingBar
            android:id="@+id/familyFriendlinessEditable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="@={festivalvm.observableFestival.familyFriendliness}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/familyFriendliness"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/editDonationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteDonationButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/deleteDonationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editDonationButton" />

        </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
